да сука, рейтинг с тестом примерно ГОТОВЫ, не дай бог поелтит все

--- a/team_profi/team_profi.csproj
+++ b/team_profi/team_profi.csproj
@@ -201,6 +201,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Theme\StylesBorder.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Theme\StylesButtons.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
