--- a/team_profi/team_profi.csproj
+++ b/team_profi/team_profi.csproj
@@ -99,6 +99,9 @@
     <Compile Include="Pages\AdminPages\TasksAdminPage.xaml.cs">
       <DependentUpon>TasksAdminPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\DopPages\AssigmentDescriptionUserPage.xaml.cs">
+      <DependentUpon>AssigmentDescriptionUserPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\DopPages\AssignmentDescriptionPage.xaml.cs">
       <DependentUpon>AssignmentDescriptionPage.xaml</DependentUpon>
     </Compile>
@@ -157,6 +160,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\AdminPages\TasksAdminPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\DopPages\AssigmentDescriptionUserPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
