--- a/team_profi/team_profi.csproj
+++ b/team_profi/team_profi.csproj
@@ -75,6 +75,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Classes\ControlClass.cs" />
+    <Compile Include="Classes\DataDBControlClass.cs" />
     <Compile Include="Classes\WindowOpenClass.cs" />
     <Compile Include="Grades.cs">
       <DependentUpon>Model1.tt</DependentUpon>
