--- a/team_profi/team_profi.csproj
+++ b/team_profi/team_profi.csproj
@@ -100,6 +100,9 @@
     <Compile Include="Pages\AdminPages\TasksAdminPage.xaml.cs">
       <DependentUpon>TasksAdminPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\DopPages\AssigmentAnswerCreate.xaml.cs">
+      <DependentUpon>AssigmentAnswerCreate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\DopPages\AssigmentCreate.xaml.cs">
       <DependentUpon>AssigmentCreate.xaml</DependentUpon>
     </Compile>
@@ -164,6 +167,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\AdminPages\TasksAdminPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\DopPages\AssigmentAnswerCreate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
