ДАААА, оно вышло, оно получилось , остались сраные баги

--- a/team_profi/team_profi.csproj
+++ b/team_profi/team_profi.csproj
@@ -103,6 +103,9 @@
     <Compile Include="Pages\DopPages\AnswerAdminSend.xaml.cs">
       <DependentUpon>AnswerAdminSend.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\DopPages\AnswerUserInfoPage.xaml.cs">
+      <DependentUpon>AnswerUserInfoPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\DopPages\AssigmentAnswerCreate.xaml.cs">
       <DependentUpon>AssigmentAnswerCreate.xaml</DependentUpon>
     </Compile>
@@ -174,6 +177,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\DopPages\AnswerAdminSend.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\DopPages\AnswerUserInfoPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
