--- a/team_profi/team_profi.csproj
+++ b/team_profi/team_profi.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Classes\ControlClass.cs" />
     <Compile Include="Classes\DataDBControlClass.cs" />
+    <Compile Include="Classes\mvvmRaitingClass.cs" />
     <Compile Include="Classes\WindowOpenClass.cs" />
     <Compile Include="Grades.cs">
       <DependentUpon>Model1.tt</DependentUpon>
