написана проверка кода, приступаю к написанию измененения пароля

--- a/team_profi/team_profi.csproj
+++ b/team_profi/team_profi.csproj
@@ -75,6 +75,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Classes\ControlClass.cs" />
+    <Compile Include="Classes\ControlCodePaswClass.cs" />
     <Compile Include="Classes\DataDBControlClass.cs" />
     <Compile Include="Classes\mvvmRaitingClass.cs" />
     <Compile Include="Classes\PasswordHasherClass.cs" />
