КОД ОТФОРМАТИРОВАН, СДЕЛАНЫ КОММЕНТАРИИ, УБРАНЫ ТЕСТОВЫЕ ДАННЫЕ И ПРОВЕРКИ. Исправил баг с отоборажением топика задания у пользователя

--- a/team_profi/team_profi.csproj
+++ b/team_profi/team_profi.csproj
@@ -35,8 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>iconProfi.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -356,12 +355,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Res\documents\" />
-    <Folder Include="Res\ico\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Res\image\logo.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="iconProfi.ico" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model1.Context.cs</LastGenOutput>
@@ -372,6 +371,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Resource Include="Res\ico\iconProfi.ico" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
